--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ social:
 show_downloads: false
 # google_analytics: G-XLQ8QVT1QY
 
-url: "https://xpko.github.io"
+# url: "https://xpko.github.io"
 
 show_warnings: true
 
