--- a/.github/workflows/update-readme-index.yml
+++ b/.github/workflows/update-readme-index.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - main  # 根据你的默认分支名称调整
       - master
-
+      
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 jobs:
   update-readme:
     runs-on: ubuntu-latest
