--- a/.github/workflows/update-readme-index.yml
+++ b/.github/workflows/update-readme-index.yml
@@ -1,11 +1,14 @@
 name: Update README Directory Index
 
 on:
-  push:
-    branches:
-      - main  # 根据你的默认分支名称调整
-      - master
-      
+  # push:
+  #   branches:
+  #     - main  # 根据你的默认分支名称调整
+  #     - master
+  workflow_run:
+    workflows: ["pages-build-deployment"]
+    types:
+      - completed      
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
